--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    lintOptions {
+        abortOnError false
+    }
+    dexOptions {
+        preDexLibraries = false
+        javaMaxHeapSize "4g"
+    }
 }
 
 dependencies {
@@ -30,6 +41,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
@@ -37,9 +49,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.google.dagger:dagger:2.13'
-    implementation "com.google.dagger:dagger-android:2.13"
-    implementation "com.google.dagger:dagger-android-support:2.13"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.13"
     annotationProcessor "com.google.dagger:dagger-compiler:2.13"
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
